--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
           </div>
         </div>
       </div>
+    </div>
       <!-- End Skills -->
 
       <!-- Resume -->
@@ -233,6 +234,7 @@
   </div>
 </div>
 </div>
+>
 
 <!-- Back To Top -->
 <a href="javascript:void(0);" class="js-back-to-top back-to-top">Top</a>
