--- a/HTML/onlinecv/index.html
+++ b/HTML/onlinecv/index.html
@@ -104,19 +104,19 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Professionally drive</h3>
+                    <h3>Backend Web Development</h3>
 
                     <p>
-                        Synergistically strategize customer directed resources rather than principle.
+                       Do server-side web application logic and integration of the work front-end web developers do 
                     </p>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Seamlessly leverage </h3>
+                    <h3>Adaptive</h3>
 
                     <p>
-                        Quickly repurpose reliable customer service with orthogonal ideas. Competently.
+                        Quickly react in change of environment.
                     </p>
                 </div>
             </div>
@@ -125,10 +125,10 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="expertise-item">
-                    <h3>Interactively incubate</h3>
+                    <h3>Teamwork</h3>
 
                     <p>
-                        Interactively myocardinate high standards in initiatives rather than next-generation.
+                       Actively coordinating with co-worker through online or in meeting.
                     </p>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 <div class="progress-wrapper">
 
                     <div class="progress-item">
-                        <span class="progress-title">Web Base Developer</span>
+                        <span class="progress-title">Web Base Development</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="62" aria-valuemin="0"
@@ -176,7 +176,7 @@
 
 
                     <div class="progress-item">
-                        <span class="progress-title">Market Research</span>
+                        <span class="progress-title">Backend Development</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0"
@@ -201,7 +201,7 @@
                     <!-- /.skill-progress -->
 
                     <div class="progress-item">
-                        <span class="progress-title">Communtcation Skills</span>
+                        <span class="progress-title">Communication Skills</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
@@ -213,6 +213,17 @@
                     <!-- /.skill-progress -->
                     <div class="progress-item">
                         <span class="progress-title">Project Management</span>
+
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+                                 aria-valuemax="100" style="width: 80%;"><span class="progress-percent"> 80%</span>
+                            </div>
+                        </div>
+                        <!-- .progress -->
+                    </div>
+                    <!-- .skill-progress -->
+                    <div class="progress-item">
+                        <span class="progress-title">PHP</span>
 
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
